--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**/*.js",
+    "prepare": "husky"
   },
-  "keywords": ["tic-tac-toe, game, optimal-move"],
+  "keywords": [
+    "tic-tac-toe, game, optimal-move"
+  ],
   "author": "Anna",
   "license": "MIT",
   "description": "",
   "devDependencies": {
-    "jest": "^30.2.0"
+    "eslint": "^9.39.2",
+    "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "lint-staged": "^16.2.7"
   }
 }
